[package]
name    = "Rust-WORLD"
version = "0.2.0"
authors = ["BiggieBoo18", "Layetri <rosa@expressivelabs.net>"]
edition = "2018"

license = "MIT"
description = "Rust-World is a WORLD(https://github.com/mmorise/World) wrapper for Rust. "
repository = "https://github.com/BiggieBoo18/Rust-WORLD"
readme = "README.md"
keywords = ["Rust-WORLD", "WORLD", "world", "vocoder"]

[dependencies]
rsworld-sys = "0.2.0"
rsworld     = "0.2.0"

[workspace]
members = [
        "rsworld",
        "rsworld-sys",
]
