[package]
name = "rsworld"
version = "0.2.0"
authors = ["BiggieBoo18", "Layetri <rosa@expressivelabs.net>"]
edition = "2018"

license = "MIT"
description = "Rust-World is a WORLD(https://github.com/mmorise/World) wrapper for Rust. "
repository = "https://github.com/layetri/Rust-WORLD"
readme = "README.md"
keywords = ["Rust-WORLD", "WORLD", "world", "vocoder"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsworld-sys = {version = "0.2.0", path = "../rsworld-sys"}
